--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,47 +1,27 @@
 {
   "env": {
     "browser": true,
-    "es2021": true,
+    "es2022": true,
     "node": true
   },
-  "parser": "@typescript-eslint/parser",
   "extends": [
-    "standard",
-    "standard-with-typescript",
-    "eslint:recommended",
+    "airbnb-base",
+    "airbnb-typescript/base",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": ["./tsconfig.json"]
+    "project": "./tsconfig.json"
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/indent": "off",
-    "@typescript-eslint/no-floating-promises": "off",
-    "@typescript-eslint/member-delimiter-style": "off",
-    "camelcase": "off",
-    "@typescript-eslint/space-before-function-paren": "off",
-    "space-before-function-paren": "off",
-    "@typescript-eslint/semi": ["error", "always"],
-    "semi": ["error", "always"],
-    "func-style": ["error", "expression"],
-    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
-    "no-else-return": ["error", { "allowElseIf": false }],
-    "object-shorthand": ["error", "always"],
-    "prefer-rest-params": "error",
-    "array-callback-return": "error",
-    "prefer-destructuring": [
-      "error",
-      {
-        "array": true,
-        "object": true
-      },
-      {
-        "enforceForRenamedProperties": false
-      }
-    ]
+    "no-console": "off",
+    "operator-linebreak": "off",
+    "implicit-arrow-linebreak": "off",
+    "function-paren-newline": "off",
+    "@typescript-eslint/comma-dangle": "off"
   }
 }
