--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-plugin-import": "^2.25.4",
-    "typescript": "^4.6.2"
+    "typescript": "^4.7.0-dev.20220311"
   }
 }
