trying node user

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,8 +25,8 @@
 
   // Use 'postCreateCommand' to run commands after the container is created.
   // "postCreateCommand": "yarn install",
-  "postCreateCommand": "apk update && apk upgrade && apk add git && git config --global user.name atree1023 && git config --global user.email 64298844+atree1023@users.noreply.github.com && npm update -g && npm install -g typescript@next"
+  "postCreateCommand": "apk update && apk upgrade && apk add git && git config --global user.name atree1023 && git config --global user.email 64298844+atree1023@users.noreply.github.com && npm update -g",
 
   // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-  //"remoteUser": "node"
+  "remoteUser": "node"
 }
